sql/item_sum.h
@@ -550,6 +550,7 @@ public:
   bool add();
   void reset_field() {};
   void update_field() {};
+  void cleanup();
 };
 
 
